# raytracer_in_a_weekend

./: CMakeLists.txt  README  main.cc  vec3.h
src/common/: camera.h  ray.h  rtweekend.h  vec3.h
src/weekend/: hittable.h  hittable_list.h  main.cc  material.h  sphere.h
